# async-git

./: .gitattributes  Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.ts
src/: git.rs  lib.rs
