
[package]
authors = ["jaskang <jaskang@qq.com>"]
edition = "2021"
name = "async_git"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.31"
napi-derive = "3.0.0"
chrono = "0.4"

[dependencies.git2]
version = "0.20.2"
features = ["vendored-openssl", "vendored-libgit2"]

[dependencies.napi]
version = "3.0.0"
features = ["async"]

[dependencies.tokio]
version = "1.47.0"
features = ["full"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
