
[package]
authors = ["jaskang <jaskang@qq.com>"]
edition = "2021"
name    = "async_git"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono      = "0.4.41"
futures     = "0.3.31"
git2        = { version = "0.20.2", features = ["vendored-openssl"] }
napi        = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
tokio       = { version = "1.47.1", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
