
[package]
authors = ["jaskang <jaskang@qq.com>"]
edition = "2021"
name    = "jnapi_async_git"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono      = "0.4.41"
futures     = "0.3.31"
napi-derive = "3.0.0"

  [dependencies.git2]
  features = ["vendored-openssl"]
  version  = "0.20.2"

  [dependencies.napi]
  features = ["async"]
  version  = "3.0.0"

  [dependencies.tokio]
  features = ["full"]
  version  = "1.47.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
